function to retrieve data from ls added

--- a/Develop/assets/css/blog.css
+++ b/Develop/assets/css/blog.css
@@ -35,8 +35,10 @@ article p {
   opacity: .75;
 }
 
+/* FOOTER POSITION CHANGED FROM FIXED TO RELATIVE */
+
 footer {
-  position: fixed;
+  position:relative ;
   inset: 0;
   top: calc(100% - 5rem);
 }
